--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     ports:
       - 80:80
     environment:
-      PGADMIN_DEFAULT_EMAIL: user@domain.com
+      PGADMIN_DEFAULT_EMAIL: 
       PGADMIN_DEFAULT_PASSWORD: password
     networks:
       - overlay
